fix alignment

--- a/src/styles/compare.css
+++ b/src/styles/compare.css
@@ -74,6 +74,8 @@
 
 .nav-menu.active {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
